--- a/src/diagrams/upstream-neurons.ejs
+++ b/src/diagrams/upstream-neurons.ejs
@@ -4,7 +4,7 @@
     .upstream-neurons {
         display: grid;
         grid-gap: 1em;
-        margin-bottom: 2em;
+        margin-bottom: 1em;
     }
 
     h5 {
@@ -57,7 +57,7 @@
     }
 
     .legend-label {
-        padding: .125rem .25rem;
+        padding: 1px 4px;
         border-radius: 2px;
         color: rgba(0, 0, 0, 0.8);
     }
