--- a/src/diagrams/similar-directions.ejs
+++ b/src/diagrams/similar-directions.ejs
@@ -10,11 +10,11 @@
 
     .columns .model {
         display: grid;
-        position: relative;
+        /* position: relative;
         grid-row-gap: 0.5em;
         grid-auto-flow: row;
         align-content: start;
-        grid-template-rows: min-content;
+        grid-template-rows: min-content; */
     }
 
     .model picture {
@@ -22,22 +22,17 @@
     }
 
     .model img {
-        box-sizing: content-box;
+        box-sizing: border-box;
         position: relative;
         width: unset;
         object-fit: none;
         z-index: 1;
-        border: 6px solid white;
-        margin: -6px;
+        outline: 6px solid white;
         border-radius: 8px;
     }
 
     .model figcaption>* {
         display: block;
-    }
-
-    .fv {
-        border-radius: 8px;
     }
 
     /*
@@ -60,13 +55,13 @@
     }
 </style>
 
-<d-figure id="figure-13">
-<figure id="4.1-similar-directions" class="columns">
-    <% for (const model of models) { %>
-    <%= require('./similar-directions-model.ejs')({model}) %>
-    <%}%>
-    <figcaption>
-      <p><a href="#figure-13" class="figure-number">13</a>. High-low frequency detectors that we've found in AlexNet, InceptionV4, and ResnetV2-50 (right), compared to their most similar counterpart from InceptionV1 (left).</p>
-      <p>These are actual neurons, not linear combinations approximating the detectors in InceptionV1.</p>
-    </figcaption>
-</figure>
+<d-figure id="figure-13" class="">
+    <figure id="4.1-similar-directions" class="columns" style="overflow-x: scroll;">
+        <% for (const model of models) { %>
+        <%= require('./similar-directions-model.ejs')({model}) %>
+        <%}%>
+        <figcaption>
+            <p><a href="#figure-13" class="figure-number">13</a>. High-low frequency detectors that we've found in AlexNet, InceptionV4, and ResnetV2-50 (right), compared to their most similar counterpart from InceptionV1 (left). These are individual neurons, not linear combinations approximating the detectors in InceptionV1.</p>
+        </figcaption>
+    </figure>
+</d-figure>
