Big conversion to PNG diagrams for compatibilty

--- a/src/diagrams/similar-directions.ejs
+++ b/src/diagrams/similar-directions.ejs
@@ -55,13 +55,13 @@
     }
 </style>
 
-<d-figure id="figure-13" class="">
+<d-figure id="figure-14">
     <figure id="4.1-similar-directions" class="columns" style="overflow-x: scroll;">
         <% for (const model of models) { %>
         <%= require('./similar-directions-model.ejs')({model}) %>
         <%}%>
         <figcaption>
-            <p><a href="#figure-13" class="figure-number">13</a>. High-low frequency detectors that we've found in AlexNet, InceptionV4, and ResnetV2-50 (right), compared to their most similar counterpart from InceptionV1 (left). These are individual neurons, not linear combinations approximating the detectors in InceptionV1.</p>
+            <a href="#figure-14" class="figure-number">14</a>. High-low frequency detectors that we've found in AlexNet, InceptionV4, and ResnetV2-50 (right), compared to their most similar counterpart from InceptionV1 (left). These are individual neurons, not linear combinations approximating the detectors in InceptionV1.
         </figcaption>
     </figure>
 </d-figure>
